Add getMatchingApps hidden API
BYPASS_TEST_FLAG_CHECK_REASON=Flagged changes are guarded.

Bug: 425634206
Flag: com.android.healthfitness.flags.matchmaking
Test: atest, manual
Change-Id: Ibb344094430cf56973d5939bd82a4cb022f0a7a4